@@ -1,5 +1,10 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.437 2005/12/08 21:20:23 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.438 2005/12/08 22:02:05 rocket Exp $
+
+  08 Dec 2005; Eric Edgar <rocket@gentoo.org>
+  modules/livecd_stage1_target.py:
+  Fix appending livecd use flag if no use flag is specified in livecd-stage1
+  spec file
 
   08 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/generic_target.py:
   Add a default path to the environment in the chroot
